# claude-oops

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: cli.rs  format.rs  git.rs  hooks.rs  main.rs  retention.rs  snapshot.rs  storage.rs
tests/: helpers.rs  integration.rs
